--- a/tutorials/tutorial1_mnist.ipynb
+++ b/tutorials/tutorial1_mnist.ipynb
@@ -43,11 +43,11 @@
       "source": [
         "if tf.gfile.Exists('./fenwicks'):\n",
         "  tf.gfile.DeleteRecursively('./fenwicks')\n",
-        "!git clone dev https://github.com/fenwickslab/fenwicks.git\n",
+        "!git clone https://github.com/fenwickslab/fenwicks.git\n",
         "\n",
         "import fenwicks as fw"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -85,17 +85,17 @@
       "metadata": {
         "id": "sKNkoJZa5QPP",
         "colab_type": "code",
+        "outputId": "869753d4-c42a-4656-cc23-16141faffc54",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 136
-        },
-        "outputId": "869753d4-c42a-4656-cc23-16141faffc54"
+        }
       },
       "cell_type": "code",
       "source": [
         "fw.colab_tpu.setup_gcs()"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -208,7 +208,7 @@
         "est = fw.tpuest.get_tpu_estimator(n_train, n_test, model_func, work_dir, trn_bs=BATCH_SIZE)\n",
         "est.train(train_input_func, steps=steps_per_epoch*EPOCHS)"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -424,17 +424,17 @@
       "metadata": {
         "id": "m6sju7JJxTfR",
         "colab_type": "code",
+        "outputId": "b2771ad5-66f4-4ba6-e2fc-1fae6d6bdba7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 666
-        },
-        "outputId": "b2771ad5-66f4-4ba6-e2fc-1fae6d6bdba7"
+        }
       },
       "cell_type": "code",
       "source": [
         "result = est.evaluate(eval_input_func, steps=1)"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -485,17 +485,17 @@
       "metadata": {
         "id": "1r2xTekiPifk",
         "colab_type": "code",
+        "outputId": "acbe25ca-17f6-4a23-888a-a69a2f9c42bd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "acbe25ca-17f6-4a23-888a-a69a2f9c42bd"
+        }
       },
       "cell_type": "code",
       "source": [
         "print(f'Test results: accuracy={result[\"accuracy\"] * 100: .2f}%, loss={result[\"loss\"]: .2f}.')"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
