tf.gfile doesn't exist in TF2.0

--- a/tutorials/tutorial1_mnist_gpu.ipynb
+++ b/tutorials/tutorial1_mnist_gpu.ipynb
@@ -106,8 +106,8 @@
         }
       },
       "source": [
-        "if tf.gfile.Exists('./fenwicks'):\n",
-        "  tf.gfile.DeleteRecursively('./fenwicks')\n",
+        "if tf.io.gfile.exists('./fenwicks'):\n",
+        "  tf.io.gfile.rmtree('./fenwicks')\n",
         "!git clone https://github.com/fenwickslab/fenwicks.git\n",
         "\n",
         "import fenwicks as fw"
