--- a/tutorials/tutorial6_speech_cmd.ipynb
+++ b/tutorials/tutorial6_speech_cmd.ipynb
@@ -53,8 +53,8 @@
         }
       },
       "source": [
-        "if tf.gfile.Exists('./fenwicks'):\n",
-        "  tf.gfile.DeleteRecursively('./fenwicks')\n",
+        "if tf.io.gfile.exists('./fenwicks'):\n",
+        "  tf.io.gfile.rmtree('./fenwicks')\n",
         "!git clone https://github.com/fenwickslab/fenwicks.git"
       ],
       "execution_count": 3,
