--- a/tutorials/tutorial3_kaggle_cifar10.ipynb
+++ b/tutorials/tutorial3_kaggle_cifar10.ipynb
@@ -79,9 +79,9 @@
           "output_type": "stream",
           "text": [
             "WARNING: Logging before flag parsing goes to stderr.\n",
-            "W0619 18:56:53.356706 140522069198720 deprecation_wrapper.py:119] From /content/fenwicks/imports.py:19: The name tf.logging.set_verbosity is deprecated. Please use tf.compat.v1.logging.set_verbosity instead.\n",
+            "W0619 18:56:53.356706 140522069198720 deprecation_wrapper.py:119] From /content/fenwicks/imports.py:19: The name logging.set_verbosity is deprecated. Please use tf.compat.v1.logging.set_verbosity instead.\n",
             "\n",
-            "W0619 18:56:53.358531 140522069198720 deprecation_wrapper.py:119] From /content/fenwicks/imports.py:19: The name tf.logging.INFO is deprecated. Please use tf.compat.v1.logging.INFO instead.\n",
+            "W0619 18:56:53.358531 140522069198720 deprecation_wrapper.py:119] From /content/fenwicks/imports.py:19: The name logging.INFO is deprecated. Please use tf.compat.v1.logging.INFO instead.\n",
             "\n",
             "W0619 18:56:54.439722 140522069198720 deprecation_wrapper.py:119] From /content/fenwicks/optim.py:4: The name tf.train.MomentumOptimizer is deprecated. Please use tf.compat.v1.train.MomentumOptimizer instead.\n",
             "\n",
@@ -501,7 +501,7 @@
         {
           "output_type": "stream",
           "text": [
-            "W0619 18:58:14.147784 140522069198720 deprecation_wrapper.py:119] From /content/fenwicks/io.py:157: The name tf.logging.info is deprecated. Please use tf.compat.v1.logging.info instead.\n",
+            "W0619 18:58:14.147784 140522069198720 deprecation_wrapper.py:119] From /content/fenwicks/io.py:157: The name logging.info is deprecated. Please use tf.compat.v1.logging.info instead.\n",
             "\n",
             "I0619 18:58:14.149814 140522069198720 io.py:157] Decompressing: /content/train.7z\n"
           ],
