--- a/tutorials/tutorial1_mnist.ipynb
+++ b/tutorials/tutorial1_mnist.ipynb
@@ -76,9 +76,9 @@
           "output_type": "stream",
           "text": [
             "WARNING: Logging before flag parsing goes to stderr.\n",
-            "W0619 18:48:13.393469 139798603798400 deprecation_wrapper.py:119] From /content/fenwicks/imports.py:19: The name tf.logging.set_verbosity is deprecated. Please use tf.compat.v1.logging.set_verbosity instead.\n",
+            "W0619 18:48:13.393469 139798603798400 deprecation_wrapper.py:119] From /content/fenwicks/imports.py:19: The name logging.set_verbosity is deprecated. Please use tf.compat.v1.logging.set_verbosity instead.\n",
             "\n",
-            "W0619 18:48:13.395671 139798603798400 deprecation_wrapper.py:119] From /content/fenwicks/imports.py:19: The name tf.logging.INFO is deprecated. Please use tf.compat.v1.logging.INFO instead.\n",
+            "W0619 18:48:13.395671 139798603798400 deprecation_wrapper.py:119] From /content/fenwicks/imports.py:19: The name logging.INFO is deprecated. Please use tf.compat.v1.logging.INFO instead.\n",
             "\n",
             "W0619 18:48:14.481223 139798603798400 deprecation_wrapper.py:119] From /content/fenwicks/optim.py:4: The name tf.train.MomentumOptimizer is deprecated. Please use tf.compat.v1.train.MomentumOptimizer instead.\n",
             "\n",
